# operator-monorepo

./: .env.devbox  .gitignore  Cargo.toml  README.md  bun.lockb  create-dev-env.sh  dagger.json  default.nix  devbox.json  flake.nix  install-one.sh  justfile  launchpad.yaml  mkdocs.yml  nx.json  package.json  pnpm-lock.yaml  rust.Dockerfile
.github/workflows/: ci.yml
apps/api/: go.mod  main.go
apps/cli/app1/: Cargo.toml  flake.nix  project.json
apps/cli/app1/init/: devenv.nix  devenv.yaml
apps/cli/app1/src/: command.rs  config.rs  flake.tmpl.nix  log.rs  main.rs
apps/cli/app2/: Cargo.toml  project.json
apps/cli/app2/src/commands/: subcommand.rs
apps/cli/app3/: Cargo.toml  project.json
apps/cli/app3/src/: main.rs
apps/cli/app3/src/commands/: cluster.rs  mod.rs  subcommand.rs  system.rs  users.rs
apps/first-rustup/: README.md  package.json  pnpm-lock.yaml
apps/first-rustup/src/: App.tsx
apps/go-app1/: main.go  project.json
apps/operators/app1/: Cargo.toml  project.json
apps/operators/app2/: Cargo.toml  project.json
commands/: devbox.json  flake.nix
commands/gcloud/: devbox.json
commands/nix/config/: home.nix
docs/: about.md  index.md  styling-your-docs.md  writing-your-docs.md
libs/: flake.nix  flake1.nix
libs/globals/: Cargo.toml  project.json
potato/: dagger.json
potato/dagger/: package-lock.json
potato/dagger/src/: index.ts
tauri-app/tauri-app/: Cargo.toml  mkdocs.yml
tauri-app/tauri-app/docs/: index.md
tauri-app/tauri-app/src-tauri/: tauri.conf.json
timoni/: bundle.cue
