[package]
name = "cli_app2"
version = "0.1.0"
edition = "2021"

[package.metadata.scripts]
build = "cargo build --release"
lint = "cargo clippy"
test = "cargo test"
format = "cargo fmt"
container = "docker buildx build --platform linux/amd64 -t cli_app2 ."
hello = "echo Hello"
goodbye = "echo Goodbye"

[dependencies]
thiserror = "1.0"
ansiterm = "0.12.2"
clap = { version = "4.5", features = ["derive", "cargo"] }
cli-table = "0.4"
dotlock = "0.5"
fs2 = "0.4"
include_dir = "0.7"
indoc = "2.0"
miette = { version = "7.1", features = ["fancy"] }
nix = { version = "0.28", features = ["signal"] }
regex = "1.10"
reqwest = { version = "0.12", features = ["blocking", "json"] }
schematic = { version = "0.14", features = ["schema", "yaml", "renderer_template", "renderer_json_schema"] }
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tempdir = "0.3"
tracing = "0.1"
which = "6.0"
whoami = "1.5"
xdg = "2.5"
futures = {version = "0.3", features = ["default"]}
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
